--- a/web_app/index.html
+++ b/web_app/index.html
@@ -1,7 +1,111 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>DoucheBag 1.0</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="js/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container" id="main_view">
+    	<div class="row">
+			<div class="col-lg-8">
+				<div class="table-responsive">
+		  			<table class="table table-hover">
+				        <thead>
+				        	<tr>
+				            	<th>Name</th>
+				            	<th>Last Douche</th>
+				            	<th>Points</th>
+				          	</tr>
+				        </thead>
+				        <tbody>
+				          	<tr>
+				            	<td>Mark</td>
+				            	<td>Otto</td>
+				            	<td>@3</td>
+				          	</tr>
+				        </tbody>
+				      </table>    			
+				</div>
+			</div>
+			<div class="col-lg-3 col-lg-offset-1">
+				<div class="row">
+					<div class="col-lg-12">
+						<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#new_douche">DOUCHE !</button>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<img src="http://www.lorempixel.com/200/200" alt="">
+						<h3>Total: $55.65</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+<!-- 	<div class="container" id="user_view"></div> -->
+
+
+	<!-- Modals -->
+	<div class="modal fade" id="new_douche" tabindex="-1" role="dialog" aria-labelledby="new_douche_label" aria-hidden="true">
+		<div class="modal-dialog">
+	    	<div class="modal-content">
+	      		<div class="modal-header">
+	        		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	        		<h4 class="modal-title" id="new_douche_label">New one !</h4>
+	      		</div>
+	      		<div class="modal-body">
+	        		<form class="form-horizontal" role="form">
+					  	<div class="form-group">
+					  		<label for="username" class="col-sm-2 control-label">Name</label>
+					    	<div class="col-sm-10">
+					      		<input type="username" class="form-control" id="username" placeholder="username">
+					    	</div>
+					  	</div>
+					  	<div class="form-group">
+					    	<label for="the_thing" class="col-sm-2 control-label">The thing</label>
+					    	<div class="col-sm-10">
+					      		<input type="the_thing" class="form-control" id="the_thing" placeholder="word/description/act etc..">
+					    	</div>
+					  	</div>
+					  	<!-- <div class="form-group">
+						  	 <div class="checkbox">
+    							<label>
+      								<input type="checkbox"> has payed ? 
+    							</label>
+  							</div>
+  						</div> -->
+					  	<div class="form-group">
+					  		<label for="" class="col-sm-2 control-label">Type</label>
+				    		<div class="col-sm-10">					    
+								<select class="form-control">
+									<option>bad words</option>
+							  		<option>bugs</option>
+								</select>
+							</div>
+					  	</div>
+					  <div class="form-group">
+					    <div class="col-sm-offset-2 col-sm-10">
+					      <button type="submit" class="btn btn-warning">#$%!</button>
+					    </div>
+					  </div>
+					</form>
+	      		</div>
+	    	</div><!-- /.modal-content -->
+	  	</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
+
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/angular.min.js"></script>
+  </body>
+</html>
