--- a/web_app/index.html
+++ b/web_app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="douchejarApp">
   <head>
     <title>DoucheBag 1.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,27 +14,10 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container" id="main_view">
+    <div class="container">
     	<div class="row">
 			<div class="col-lg-8">
-				<div class="table-responsive">
-		  			<table class="table table-hover">
-				        <thead>
-				        	<tr>
-				            	<th>Name</th>
-				            	<th>Last Douche</th>
-				            	<th>Points</th>
-				          	</tr>
-				        </thead>
-				        <tbody>
-				          	<tr>
-				            	<td>Mark</td>
-				            	<td>Otto</td>
-				            	<td>@3</td>
-				          	</tr>
-				        </tbody>
-				      </table>    			
-				</div>
+				  <div ng-view></div>
 			</div>
 			<div class="col-lg-3 col-lg-offset-1">
 				<div class="row">
@@ -107,5 +90,8 @@
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/angular.min.js"></script>
+    <script src="js/angular-route.min.js"></script>
+    <script src="js/angular-resource.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
