CORS request fixed. listView working

--- a/web_app/list.html
+++ b/web_app/list.html
@@ -9,8 +9,8 @@
         </thead>
         <tbody>
           	<tr ng-repeat="user in users | orderBy:'-points'">
-            	<td>{{user.name}}</td>
-            	<td>{{user.last_douche}}</td>
+            	<td>{{user.username}}</td>
+            	<td>{{user.last_thing}}</td>
             	<td>{{user.points}}</td>
           	</tr>
         </tbody>
