--- a/web_app/index.html
+++ b/web_app/index.html
@@ -37,61 +37,13 @@
 
 <!-- 	<div class="container" id="user_view"></div> -->
 
-
-	<!-- Modals -->
-	<div class="modal fade" id="new_douche" tabindex="-1" role="dialog" aria-labelledby="new_douche_label" aria-hidden="true">
-		<div class="modal-dialog">
-	    	<div class="modal-content">
-	      		<div class="modal-header">
-	        		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        		<h4 class="modal-title" id="new_douche_label">New one !</h4>
-	      		</div>
-	      		<div class="modal-body">
-	        		<form class="form-horizontal" role="form">
-					  	<div class="form-group">
-					  		<label for="username" class="col-sm-2 control-label">Name</label>
-					    	<div class="col-sm-10">
-					      		<input type="username" class="form-control" id="username" placeholder="username">
-					    	</div>
-					  	</div>
-					  	<div class="form-group">
-					    	<label for="the_thing" class="col-sm-2 control-label">The thing</label>
-					    	<div class="col-sm-10">
-					      		<input type="the_thing" class="form-control" id="the_thing" placeholder="word/description/act etc..">
-					    	</div>
-					  	</div>
-					  	<!-- <div class="form-group">
-						  	 <div class="checkbox">
-    							<label>
-      								<input type="checkbox"> has payed ? 
-    							</label>
-  							</div>
-  						</div> -->
-					  	<div class="form-group">
-					  		<label for="" class="col-sm-2 control-label">Type</label>
-				    		<div class="col-sm-10">					    
-								<select class="form-control">
-									<option>bad words</option>
-							  		<option>bugs</option>
-								</select>
-							</div>
-					  	</div>
-					  <div class="form-group">
-					    <div class="col-sm-offset-2 col-sm-10">
-					      <button type="submit" class="btn btn-warning">#$%!</button>
-					    </div>
-					  </div>
-					</form>
-	      		</div>
-	    	</div><!-- /.modal-content -->
-	  	</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
-
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
     <script src="js/angular-resource.min.js"></script>
+    <script src="js/ui-bootstrap-0.7.0.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.7.0.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
