POST douchejar_user method in REST API and Client UI

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -26,9 +26,9 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-lg-12" ng-show="total_points">
 						<img src="http://www.lorempixel.com/200/200" alt="">
-						<h3>Total: $55.65</h3>
+						<h3>Total: $<span ng-bind="total_points"></span></h3>
 					</div>
 				</div>
 			</div>
