--- a/web_app/list.html
+++ b/web_app/list.html
@@ -27,17 +27,17 @@
               <h4 class="modal-title" id="new_douche_label">New one !</h4>
           </div>
           <div class="modal-body">
-              <form class="form-horizontal" role="form" ng-submit="addDouche()">
+              <form class="form-horizontal" role="form" ng-submit="addDouche()" novalidate name="new_douche_form">
                   <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">Username</label>
                     <div class="col-sm-10">
-                      <input class="form-control" type="text" ng-model="new_douche.username" typeahead="username for username in usernames | filter:$viewValue | limitTo:8" typeahead-editable="false">                
+                      <input class="form-control" type="text" ng-model="new_douche.username" typeahead="username for username in usernames | filter:$viewValue | limitTo:8" typeahead-editable="false" required>                
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="the_thing" class="col-sm-2 control-label">The thing</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="word/description/act etc.." ng-model="new_douche.the_thing">
+                        <input type="text" class="form-control" placeholder="word/description/act etc.." ng-model="new_douche.the_thing" required>
                     </div>
                 </div>
               <!-- <div class="form-group">
@@ -50,8 +50,8 @@
             <div class="form-group">
                 <label for="" class="col-sm-2 control-label">Type</label>
                 <div class="col-sm-10">             
-                    <select class="form-control" ng-model="new_douche.type">
-                      <option value="1">bad words</option>
+                    <select class="form-control" ng-model="new_douche.type" required>
+                      <option value="1" selected>bad words</option>
                       <option value="2">bugs</option>
                   </select>
               </div>
