--- a/web_app/detail.html
+++ b/web_app/detail.html
@@ -1,19 +1,32 @@
+<div class="row">
+	<h2>{{username}} doucheJar !! <small><a href="#/">[back to list]</a></small></h2>
+</div>
 <div class="table-responsive">
 		<table class="table table-hover">
         <thead>
         	<tr>
-            	<th>Name</th>
-            	<th>Last Douche</th>
-            	<th>Points</th>
+            	<th>The Thing</th>
+            	<th>Type</th>
+            	<th>Date</th>
+                <th>Points</th>
                 <th></th>
           	</tr>
         </thead>
+         <tfoot ng-show="total_points">
+        <tr>
+            <td colspan="3"><strong>TOTAL USER POINTS: </strong></td>
+            <td><strong>{{total_points}}</strong></td>
+            <td></td>
+        </tr>
+    </tfoot>
         <tbody>
-          	<tr ng-repeat="user in users | orderBy:'-points'">
-            	<td>{{user.username}}</td>
-            	<td>{{user.last_thing}}</td>
-            	<td>{{user.points}}</td>
-                <td><a href="#/list/{{user.username}}/{{user.id}}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+          	<tr ng-repeat="douchejar in user_douchejars | orderBy:'-created_at'">
+            	<td>{{douchejar.the_thing}}</td>
+            	<td>{{douchejar.name}}</td>
+            	<td>{{douchejar.created_at}}</td>
+            	<td>{{douchejar.point}}</td>
+                <td><a ng-click="destroy(douchejar)"><span class="glyphicon glyphicon-trash"></span></a></td>
+                <td></td>
           	</tr>
         </tbody>
       </table>    			
@@ -26,16 +39,10 @@
         <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title" id="new_douche_label">New one !</h4>
+              <h4 class="modal-title" id="new_douche_label">New one for {{username}} !</h4>
           </div>
           <div class="modal-body">
               <form class="form-horizontal" role="form" ng-submit="addDouche()" novalidate name="new_douche_form">
-                  <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username</label>
-                    <div class="col-sm-10">
-                      <input class="form-control" type="text" ng-model="new_douche.username" typeahead="username for username in usernames | filter:$viewValue | limitTo:8" typeahead-editable="false" required>                
-                    </div>
-                  </div>
                   <div class="form-group">
                     <label for="the_thing" class="col-sm-2 control-label">The thing</label>
                     <div class="col-sm-10">
