--- a/web_app/list.html
+++ b/web_app/list.html
@@ -11,7 +11,7 @@
         <tbody>
           	<tr ng-repeat="user in users | orderBy:'-points'">
             	<td>{{user.username}}</td>
-            	<td>{{user.last_thing}}</td>
+            	<td>{{user.the_thing}}</td>
             	<td>{{user.points}}</td>
                 <td><a href="#/list/{{user.username}}/{{user.id}}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
           	</tr>
